panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_object_like_macro.c"
   (declaration external (putchar~0 `fn(c: int) -> int` (static putchar)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int` @0) (42 `int` @0))
         (expression
            (call `int` @4
               (addressof `ptr<fn(c: int) -> int>` @8
                  (putchar~0 `fn(c: int) -> int` (static putchar)))
               (97 `int` @16)))
         (expression
            (call `int` @4
               (addressof `ptr<fn(c: int) -> int>` @8
                  (putchar~0 `fn(c: int) -> int` (static putchar)))
               (10 `int` @16)))
         (return (x~2 `int` @0)))))

----- stderr -----
