panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_standard_va_opt_example.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_standard_va_opt_example.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_standard_va_opt_example.c"
   (definition external (x~0 `int` (static x)) (42 `int`))
   (function-definition external stack-size=8
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return (x~0 `int` (static x))))))

----- stderr -----
